[gd_scene load_steps=4 format=3 uid="uid://lkylkou7fq2u"]

[ext_resource type="Script" path="res://src/objects/IceProjectile.gd" id="1_ice"]
[ext_resource type="Texture2D" path="res://assets/sprites/ice_projectile.svg" id="2_sprite"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ice"]
radius = 12.0

[node name="IceProjectile" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_ice")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_sprite")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ice")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 0)
scale = Vector2(1.2, 1.2)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
